--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,3 @@
 <h1>タスク更新</h1>
 
-<%= form_with(model: @task, local: true) do |f| %>
-  <%= f.text_field :content %>
-  <%= f.submit '登録' %>
-<% end %>
+<%= render 'form', task: @task %>
