--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,8 @@
 <h1>タスク詳細</h1>
 
-<p><%= @task.id.to_s + ': ' + @task.content %></p>
+<p>ID: <%= @task.id %></p>
+<p>ステータス: <%= @task.status %></p>
+<p>タスク内容: <%= @task.content %></p>
 
 <%= link_to '一覧へ', tasks_path %>
 <%= link_to '編集', edit_task_path(@task) %>
